--- a/.github/workflows/admu-ci.yml
+++ b/.github/workflows/admu-ci.yml
@@ -112,7 +112,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        job_group: [0, 1, 2, 3, 4]
+        job_group: [0, 1, 2, 3]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/cache@v3
