--- a/.github/workflows/admu-release.yml
+++ b/.github/workflows/admu-release.yml
@@ -179,7 +179,6 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: jumpcloud-admu
-          path: admu-artifacts/
       - name: Build Draft Release
         run: |
           VERSION=$(grep -Po '(\d+\.\d+\.\d+)' ${{ github.workspace }}/jumpcloud-ADMU/JumpCloud.ADMU.psd1)
@@ -190,8 +189,8 @@ jobs:
           # draft release
           (gh release view $TAG && echo "Release exists for $TAG") || gh release create $TAG --title "$TITLE" --notes "$BODY" --draft
           # upload signed artifacts
-          ls -la ${{ github.workspace }}/admu-artifacts/Exe/
-          gh release upload $TAG ${{ github.workspace }}/admu-artifacts/Exe/gui_jcadmu.exe ${{ github.workspace }}/admu-artifacts/Exe/uwp_jcadmu.exe
+          ls -la ${{ github.workspace }}/jumpcloud-ADMU/Exe/
+          gh release upload $TAG ${{ github.workspace }}/jumpcloud-ADMU/Exe/gui_jcadmu.exe ${{ github.workspace }}/jumpcloud-ADMU/Exe/uwp_jcadmu.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   Manual-Approval-Release:
@@ -209,7 +208,6 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: jumpcloud-admu
-          path: admu-artifacts/
       - name: Publish
         shell: pwsh
         run: |
