Sa 3609 admu gha migrate ci ken (#103)
* Create new test files

* test

* fix error

* fix test

* test

* test

* fix test

* test

* test

* test

* matrix add

* test

* test

* test

* test

* test fix

* test

* cleanup

* test

--- a/.github/workflows/admu-ci.yml
+++ b/.github/workflows/admu-ci.yml
@@ -139,7 +139,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        job_group: [0, 1]
+        job_group: [0, 1, 2, 3]
     steps:
       - uses: actions/checkout@v4
       - name: Download artifacts
