--- a/.github/workflows/admu-release.yml
+++ b/.github/workflows/admu-release.yml
@@ -89,9 +89,9 @@ jobs:
                   Write-Host "[status] latest module: $RequiredModule; latest version: $($latestModule.Version)"
                   Write-Host("[status] Installing module: '$RequiredModule'; version: $($PSDependencies[$RequiredModule].RequiredVersion) from $($PSDependencies[$RequiredModule].Repository)")
                   if ($($PSDependencies[$RequiredModule].RequiredVersion) -eq "latest"){
-                    Install-Module -Name $RequiredModule -Repository:($($PSDependencies[$RequiredModule].Repository))-Force
+                    Install-Module -Name $RequiredModule -Repository:($($PSDependencies[$RequiredModule].Repository)) -Force
                   } else {
-                    Install-Module -Name $RequiredModule -Repository:($($PSDependencies[$RequiredModule].Repository)) -RequiredVersion:($($PSDependencies[$RequiredModule].RequiredVersion)) -AllowPrerelease -Force
+                    Install-Module -Name $RequiredModule -Repository:($($PSDependencies[$RequiredModule].Repository)) -RequiredVersion:($($PSDependencies[$RequiredModule].RequiredVersion)) -AllowPrerelease -Force -AllowClobber
                   }
               }
           }
