--- a/.github/workflows/admu-release.yml
+++ b/.github/workflows/admu-release.yml
@@ -117,6 +117,11 @@ jobs:
       - name: Pack nuspec
         shell: pwsh
         run: |
+          # set psm1 to point to public/start-migartion
+          $psm1Path = "${{ github.workspace }}/jumpcloud-ADMU/JumpCloud.ADMU.psm1"
+          $psm1Content = Get-Content -path $psm1Path
+          $psm1Content = $psm1Content -replace "\\Powershell\\", "\Public\"
+          # Pack
           nuget pack "${{ github.workspace }}/jumpcloud-ADMU/JumpCloud.ADMU.nuspec"
       - name: Validate NuPkg File
         shell: pwsh
