--- a/.github/workflows/admu-release.yml
+++ b/.github/workflows/admu-release.yml
@@ -117,6 +117,12 @@ jobs:
       - name: Pack nuspec
         shell: pwsh
         run: |
+          # set psm1 to point to public/start-migartion
+          $psm1Path = "${{ github.workspace }}/jumpcloud-ADMU/JumpCloud.ADMU.psm1"
+          $psm1Content = Get-Content -path $psm1Path
+          $psm1Content = $psm1Content -replace "\\Powershell\\", "\Public\"
+          Set-Content -Value $psm1Content -Path $psm1Path -Force
+          # Pack
           nuget pack "${{ github.workspace }}/jumpcloud-ADMU/JumpCloud.ADMU.nuspec"
       - name: Validate NuPkg File
         shell: pwsh
@@ -217,7 +223,6 @@ jobs:
           $nupkgPath | Should -Exist
           Write-Host "Nupkg Artifact Restored: $nupkgPath"
           # nuget push from here:
-          # TODO: TO PUBLISH UNCOMMENT BELOW:
-          # dotnet nuget push $nupkgPath --source PSGallery --api-key $env:NuGetApiKey
+          dotnet nuget push $nupkgPath --source PSGallery --api-key $env:NuGetApiKey
         env:
           NuGetApiKey: ${{ secrets.NUGETAPIKEY }}
