--- a/.github/workflows/admu-ci.yml
+++ b/.github/workflows/admu-ci.yml
@@ -12,6 +12,10 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 # define jobs
+
+permissions:
+  id-token: write
+
 jobs:
   Filter-Branch:
     runs-on: ubuntu-latest
@@ -126,8 +130,14 @@ jobs:
           RELEASE_TYPE: ${{ needs.Check-PR-Labels.outputs.RELEASE_TYPE }}
         run: |
           . "${{ github.workspace }}/Deploy/build.ps1" -ModuleVersionType $env:RELEASE_TYPE -ModuleName "JumpCloud.ADMU"
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: ${{ env.AWS_REGION }}
+          role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_NUMBER }}:oidc-provider/token.actions.githubusercontent.com
+          role-session-name: GHA_ADMU_TEST
       - name: Sign and Upload
-        uses: TheJumpCloud/common-github-actions/code-signing/sign-and-upload@v2
+        uses: ./.github/workflows/sign-common-actions/sign-and-upload
         with:
           files: |-
             ${{ github.workspace }}/jumpcloud-ADMU/Exe/gui_jcadmu.exe
