--- a/.github/workflows/admu-ci.yml
+++ b/.github/workflows/admu-ci.yml
@@ -125,28 +125,31 @@ jobs:
         with:
           path: 'C:\Users\runneradmin\Documents\PowerShell\Modules\'
           key: PS-Dependancies
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: ${{ secrets.AWS_REGION }}
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_NUMBER }}:role/oidc-GitHubAction-AssumeRoleWithAction
+          role-session-name: GHA_ADMU_TEST
+      - name: Sts GetCallerIdentity
+        run: |
+          aws sts get-caller-identity
       - name: Build ADMU Module
         shell: powershell
         env:
           RELEASE_TYPE: ${{ needs.Check-PR-Labels.outputs.RELEASE_TYPE }}
         run: |
           . "${{ github.workspace }}/Deploy/build.ps1" -ModuleVersionType $env:RELEASE_TYPE -ModuleName "JumpCloud.ADMU"
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-region: ${{ secrets.AWS_REGION }}
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_NUMBER }}:role/oidc-admu-test-role
-          role-session-name: GHA_ADMU_TEST
-      - name: Sign and Upload
-        uses: ./.github/workflows/sign-common-actions/sign-and-upload
-        with:
-          files: |-
-            ${{ github.workspace }}/jumpcloud-ADMU/Exe/gui_jcadmu.exe
-            ${{ github.workspace }}/jumpcloud-ADMU/Exe/uwp_jcadmu.exe
-          SM_API_KEY: ${{ secrets.SM_API_KEY }}
-          SM_CLIENT_CERT_PASSWORD: ${{ secrets.SM_CLIENT_CERT_PASSWORD }}
-          SM_CLIENT_CERT_FILE_B64: ${{ secrets.SM_V2_CLIENT_CERT_FILE_B64 }}
-          SM_HOST: ${{ secrets.SM_HOST }}
+      # - name: Sign and Upload
+      #   uses: ./.github/workflows/sign-common-actions/sign-and-upload
+      #   with:
+      #     files: |-
+      #       ${{ github.workspace }}/jumpcloud-ADMU/Exe/gui_jcadmu.exe
+      #       ${{ github.workspace }}/jumpcloud-ADMU/Exe/uwp_jcadmu.exe
+      #     SM_API_KEY: ${{ secrets.SM_API_KEY }}
+      #     SM_CLIENT_CERT_PASSWORD: ${{ secrets.SM_CLIENT_CERT_PASSWORD }}
+      #     SM_CLIENT_CERT_FILE_B64: ${{ secrets.SM_V2_CLIENT_CERT_FILE_B64 }}
+      #     SM_HOST: ${{ secrets.SM_HOST }}
       - name: Upload Nuspec
         uses: actions/upload-artifact@v3
         with:
