--- a/.github/workflows/admu-ci.yml
+++ b/.github/workflows/admu-ci.yml
@@ -37,10 +37,13 @@ jobs:
 
           pr_labels=$(gh pr view ${BRANCH_NAME} --json labels  --jq '.labels' )
           echo "pr_labels=${pr_labels}" >> $GITHUB_OUTPUT
+
+          echo "pr_id=${pr_id}"
+          echo "pr_labels=${pr_labels}"
   Filter-Branch:
     runs-on: ubuntu-latest
     needs: ["Setup-Variables"]
-    if: contains(needs.Setup-Variables.PR_LABELS.*.name, 'ADMU')
+    # if: contains(needs.Setup-Variables.PR_LABELS.*.name, 'ADMU')
     steps:
       - run: echo "Building JumpCloud Module 'ADMU'"
   Check-PR-Labels:
