--- a/.github/workflows/admu-ci.yml
+++ b/.github/workflows/admu-ci.yml
@@ -147,8 +147,8 @@ jobs:
           files: |-
             ${{ github.workspace }}/jumpcloud-ADMU/Exe/gui_jcadmu.exe
             ${{ github.workspace }}/jumpcloud-ADMU/Exe/uwp_jcadmu.exe
-          SM_API_KEY: ${{ secrets.SM_API_KEY }}
-          SM_CLIENT_CERT_PASSWORD: ${{ secrets.SM_CLIENT_CERT_PASSWORD }}
+          SM_API_KEY: ${{ secrets.SM_V2_API_KEY }}
+          SM_CLIENT_CERT_PASSWORD: ${{ secrets.SM_V2_CLIENT_CERT_PASSWORD }}
           SM_CLIENT_CERT_FILE_B64: ${{ secrets.SM_V2_CLIENT_CERT_FILE_B64 }}
           SM_HOST: ${{ secrets.SM_HOST }}
           region: ${{ secrets.AWS_REGION }}
