test upload only

--- a/.github/workflows/admu-ci.yml
+++ b/.github/workflows/admu-ci.yml
@@ -144,7 +144,7 @@ jobs:
       - name: Sign and Upload
         uses: ./.github/workflows/sign-common-actions
         with:
-          files: |-
+          upload-only-files: |-
             ${{ github.workspace }}/jumpcloud-ADMU/Exe/gui_jcadmu.exe
             ${{ github.workspace }}/jumpcloud-ADMU/Exe/uwp_jcadmu.exe
           SM_API_KEY: ${{ secrets.SM_V2_API_KEY }}
