--- a/.github/workflows/admu-ci.yml
+++ b/.github/workflows/admu-ci.yml
@@ -171,7 +171,7 @@ jobs:
       - name: Download ADMU artifact
         uses: actions/download-artifact@v3
         with:
-          name: jumpcloud-admu
+          name: jumpcloud-admu-build
       - name: Build Draft Release
         run: |
           VERSION=$(grep -Po '(\d+\.\d+\.\d+)' ${{ github.workspace }}/jumpcloud-ADMU/JumpCloud.ADMU.psd1)
