--- a/.github/workflows/sign-common-actions/action.yml
+++ b/.github/workflows/sign-common-actions/action.yml
@@ -69,7 +69,7 @@ runs:
     - name: Setup STM KSP for Code Signing
       shell: cmd
       run: |
-        curl -X GET https://one.digicert.com/signingmanager/api-ui/v1/releases/smtools-windows-x64.msi/download -H "x-api-key:%${{ inputs.SM_API_KEY }}%" -o smtools-windows-x64.msi
+        curl -X GET https://one.digicert.com/signingmanager/api-ui/v1/releases/smtools-windows-x64.msi/download -H "x-api-key:${{ inputs.SM_API_KEY }}" -o smtools-windows-x64.msi
         msiexec /i smtools-windows-x64.msi /quiet /qn
         smksp_registrar.exe list > nul 2>&1
         smctl.exe keypair ls > nul 2>&1
