--- a/.github/workflows/admu-release.yml
+++ b/.github/workflows/admu-release.yml
@@ -146,8 +146,18 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
           role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_NUMBER }}:role/${{ secrets.AWS_ROLE_NAME }}
           role-session-name: GHA_ADMU_SIGN_EXE
+      - name: Set ADMU ENV VERSION
+        id: admu-version
+        shell: pwsh
+        run: |
+          $content = Get-Content -Path "${{ github.workspace }}/PowerShell/JumpCloud.ADMU.psd1" -Raw
+          $matches = $content | Select-String -Pattern "ModuleVersion.*([0-9]+.[0-9]+.[0-9])"
+          $version = $matches.matches.groups[1].value
+          echo "RELEASE_VERSION=$version" >> $env:GITHUB_OUTPUT
       - name: Sign and Upload
         uses: ./.github/workflows/sign-common-actions
+        env:
+          RELEASE_VERSION: ${{ steps.admu-version.outputs.RELEASE_VERSION }}
         with:
           files: |-
             jumpcloud-ADMU/Exe/gui_jcadmu.exe
@@ -157,6 +167,7 @@ jobs:
           SM_CLIENT_CERT_FILE_B64: ${{ secrets.SM_V2_CLIENT_CERT_FILE_B64 }}
           SM_HOST: ${{ secrets.SM_HOST }}
           region: ${{ secrets.AWS_REGION }}
+          version: ${{ env.RELEASE_VERSION }}
       - name: Upload Release Artifacts
         uses: actions/upload-artifact@v3
         with:
